# ucr-firmware-monorepo

./: .gitmodules  CMakeLists.txt  README.md  gcc-arm-none-eabi.cmake
.west/: config
applications/: CMakeLists.txt
applications/barebones_test/: CMakeLists.txt  STM32H753XX_FLASH.ld
applications/barebones_test/inc/: stm32h7xx_hal_conf.h
applications/cubemx_test_advanced/: .mxproject  CMakeLists.txt  STM32H753XX_FLASH.ld  cubemx_test_advanced.ioc
applications/cubemx_test_advanced/cmake/stm32cubemx/: CMakeLists.txt
applications/cubemx_test_advanced_freertos/: .mxproject  CMakeLists.txt  cubemx_test_advanced_freertos.ioc
applications/cubemx_test_advanced_freertos/Core/Src/: main.c
applications/cubemx_test_advanced_freertos/cmake/stm32cubemx/: CMakeLists.txt
applications/cubemx_test_mpu_basic/: .mxproject  CMakeLists.txt  cubemx_test_mpu_basic.ioc
applications/cubemx_test_mpu_basic/cmake/stm32cubemx/: CMakeLists.txt
applications/cubemx_test_nompu_basic/: CMakeLists.txt  cubemx_test_nompu_basic.ioc
applications/cubemx_test_nompu_basic/Src/: main.c
applications/front_controller/: CMakeLists.txt
applications/front_controller/cmake/stm32cubemx/: CMakeLists.txt
applications/front_controller_cubemx/: .mxproject  CMakeLists.txt  STM32H753XX_FLASH.ld  front_controller_cubemx.ioc
applications/front_controller_cubemx/Inc/: adc.h  dac.h  i2c.h  spi.h  stm32h7xx_hal_conf.h  usart.h
applications/front_controller_cubemx/Src/: adc.c  dac.c  eth.c  fdcan.c  freertos.c  gpio.c  i2c.c  main.c  sdmmc.c  spi.c  stm32h7xx_hal_msp.c  stm32h7xx_it.c  usart.c
applications/front_controller_cubemx/cmake/stm32cubemx/: CMakeLists.txt
applications/zephyr_eth_sock_test/: CMakeLists.txt  app.overlay  prj.conf
applications/zephyr_eth_sock_test/src/: main.c
applications/zephyr_test_app/: CMakeLists.txt
applications/zephyr_test_app/src/: main.c
documentation/: goals.txt  more notes.rtf
manifest/: west.yml
